# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Cars API",
     "description": "API for managing cars",
-    "version": "1.0.0"
+    "version": "1.0.2"
   },
   "servers": [
     {
@@ -14,6 +14,7 @@
     "/cars": {
       "get": {
         "summary": "Get all cars with pagination",
+        "tags": ["Car"],
         "parameters": [
           {
             "name": "pageIndex",
@@ -95,6 +96,7 @@
     "/cars/{id}": {
       "get": {
         "summary": "Get a specific car by ID",
+        "tags": ["Car"],
         "parameters": [
           {
             "name": "id",
@@ -149,6 +151,88 @@
           },
           "500": {
             "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/cars/new": {
+      "post": {
+        "summary": "Create a new car",
+        "tags": ["Car"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "make": {
+                    "type": "string"
+                  },
+                  "model": {
+                    "type": "string"
+                  },
+                  "year": {
+                    "type": "integer"
+                  },
+                  "mileage": {
+                    "type": "integer"
+                  },
+                  "price": {
+                    "type": "integer"
+                  },
+                  "image": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "make",
+                  "model",
+                  "year",
+                  "mileage",
+                  "price",
+                  "image"
+                ]
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Car created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "make": {
+                      "type": "string"
+                    },
+                    "model": {
+                      "type": "string"
+                    },
+                    "year": {
+                      "type": "integer"
+                    },
+                    "mileage": {
+                      "type": "integer"
+                    },
+                    "price": {
+                      "type": "integer"
+                    },
+                    "image": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error, car not created"
           }
         }
       }
